resolve bad code smells